# ezTerm

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.cmd  build.sh  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  site.yml
docs/: RELEASING.md  UPDATER_SIGNING.md
docs/design/: critique.md  design-system.md  implementation-notes.md
docs/release-notes/: v0.12.0.md  v0.13.0.md  v0.14.0.md  v0.14.1.md  v0.15.0.md  v0.16.0.md  v0.17.0.md  v0.18.1.md  v0.18.2.md  v0.18.3.md  v0.18.4.md  v0.18.5.md  v0.18.6.md  v0.19.0.md  v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.1.0.md  v1.1.2.md  v1.1.3.md  v1.1.4.md  v1.1.5.md  v1.11.1.md  v1.12.0.md  v1.2.2.md  v1.3.0.md  v1.3.4.md  v1.3.7.md  v1.3.8.md  v1.4.0.md  v1.5.0.md  v1.6.0.md  v1.6.9.md  v1.7.0.md  v1.7.1.md  v1.7.2.md  v1.7.4.md  v1.8.1.md  v1.9.0.md
docs/superpowers/plans/: 2026-04-18-plan-1-foundation.md  2026-04-18-plan-2-ssh-terminal.md  2026-04-19-plan-3-sftp-scp.md  2026-04-27-window-views.md  2026-04-28-updater-deb-and-macos.md  2026-04-28-view-mode-preserves-connection.md  2026-05-11-ssh-port-forwarding.md  2026-05-12-gh-pages-site.md
docs/superpowers/specs/: 2026-04-18-ezterm-design.md  2026-04-27-window-views-design.md  2026-04-28-updater-deb-and-macos-design.md  2026-04-28-view-mode-preserves-connection-design.md  2026-05-11-ssh-port-forwarding-design.md  2026-05-12-gh-pages-site-design.md
migrations/: 20260418120000_init.sql  20260419165652_host_key_sha256.sql  20260419193554_known_hosts_pk_simplify.sql  20260420120000_session_key_passphrase.sql  20260420130000_session_advanced_settings.sql  20260421120000_session_kind.sql  20260421150000_session_forward_x11.sql  20260422120000_session_font_family.sql  20260423120000_keepalive_default_60.sql  20260423130000_session_starting_dir.sql  20260511145732_session_forwards.sql  20260515154320_vault_recovery.sql  20260518120000_clear_autodetect_color.sql
site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  vitest.config.ts
site/mockups/: README.md  index.html
site/mockups/option-1-terminal/: index.html
site/mockups/option-2-saas/: index.html
site/mockups/option-3-brand/: index.html
site/mockups/option-mix/: index.html
site/public/: CNAME  manifest.json  robots.txt
site/scripts/: make-icon.mjs  post-build.mjs
site/src/: content.config.ts
site/src/components/: FeatureGrid.astro  GoogleAnalytics.astro  Hero.astro  InstallTabs.astro  MockupFrame.astro  SiteFooter.astro  WhyEzterm.astro
site/src/components/starlight/: Head.astro
site/src/content/docs/: troubleshooting.md
site/src/content/docs/docs/: faq.md  index.mdx  troubleshooting.md
site/src/content/docs/docs/features/: sftp.md  (+6 more)
site/src/content/docs/features/: sftp.md  ssh.md  vault.md  wsl.md
site/src/content/docs/getting-started/: first-connect.md  importing-from-mobaxterm.md  install.md
site/src/lib/: version.test.ts  version.ts
site/src/pages/: 404.astro  changelog.astro  download.astro  index.astro  screenshots.astro
site/src/styles/: global.css  starlight-overrides.css
src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json  tauri.windows.conf.json  wix-remove-user-vcxsrv.wxs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  log_redacted.rs  main.rs  state.rs
src-tauri/src/backup/: mod.rs
src-tauri/src/commands/: backup.rs  credentials.rs  folders.rs  forwards.rs  import.rs  local.rs  mod.rs  scp.rs  sessions.rs  settings.rs  sftp.rs  splash.rs  ssh.rs  sync.rs  updater.rs  vault.rs  xserver.rs
src-tauri/src/db/: credentials.rs  folders.rs  forwards.rs  known_hosts.rs  mod.rs  sessions.rs  settings.rs
src-tauri/src/import/: mobaxterm.rs  mod.rs
src-tauri/src/local/: mod.rs  registry.rs  shells.rs
src-tauri/src/scp/: mod.rs
src-tauri/src/sftp/: mod.rs  registry.rs  session.rs  transfer.rs  upload_stream.rs
src-tauri/src/sftp/drag/: mod.rs  win.rs
src-tauri/src/ssh/: client.rs  known_hosts.rs  mod.rs  registry.rs
src-tauri/src/ssh/forwards/: dynamic.rs  local.rs  mod.rs  remote.rs  socks5.rs
src-tauri/src/sync/: mod.rs  s3.rs
src-tauri/src/vault/: aead.rs  kdf.rs  mod.rs  recovery.rs  snapshot.rs  tests.rs
src-tauri/src/wslfs/: handle.rs  list.rs  mod.rs  ops.rs  transfer.rs
src-tauri/src/xserver/: mod.rs
src-tauri/tests/: ssh_smoke.rs
src-tauri/vcxsrv/: .gitkeep
ui/: eslint.config.mjs  package-lock.json  package.json  postcss.config.js  tailwind.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: auth-fix-overlay.tsx  backup-dialog.tsx  cascade-chrome.tsx  change-password-dialog.tsx  confirm-dialog.tsx  context-menu.tsx  credential-picker.tsx  credentials-dialog.tsx  empty-state.tsx  find-overlay.tsx  font-picker-popover.tsx  forward-dialog.tsx  forwards-pane.tsx  host-key-dialog.tsx  import-mobaxterm-dialog.tsx  main-shell.tsx  mdi-area.tsx  mdi-frame.tsx  minimized-strip.tsx  move-to-folder-dialog.tsx  prompt-dialog.tsx  recovery-code-dialog.tsx  recovery-unlock-dialog.tsx  reset-vault-dialog.tsx  restore-dialog.tsx  session-dialog.tsx  sessions-sidebar.tsx  sftp-breadcrumb.tsx  sftp-file-row.tsx  sftp-pane.tsx  status-bar.tsx  status-dot.tsx  sync-dialog.tsx  tab-slot.tsx  tabs-shell.tsx  terminal-context-menu.tsx  terminal.tsx  tile-grid-dialog.tsx  toast-region.tsx  transfer-status.tsx  (+4 more)
ui/design/mockups/: find-overlay.html  light-theme-overview.html  main-shell-empty.html  main-shell-populated.html  mockups.css  session-dialog-edit.html  session-dialog-new.html  sessions-context-menu.html  sftp-sidepane-open.html  terminal-context-menu.html  unlock-first-run.html  unlock-return.html
ui/lib/: credential-events.ts  fonts.ts  forwards.ts  password-strength.ts  pointer-drag.ts  sftp.ts  ssh.ts  tabs-store.ts  tauri.ts  theme.ts  toast.ts  types.ts  updater.ts  use-mdi-drag.ts  use-mdi-resize.ts  xterm.ts
ui/public/: splash.html
(+3 files in other folders)
