[package]
name = "ezterm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Free Windows SSH client (MobaXterm-style)."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

directories = "5"

russh = "0.45"
russh-keys = "0.45"
russh-sftp = "2"
sha2 = "0.10"
base64 = "0.22"
async-channel = "2"
bytes = "1"
portable-pty = "0.8"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
integration = []
