[package]
name = "ezterm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Free Windows SSH client (MobaXterm-style)."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.10"
zeroize = { version = "1.7", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

directories = "6"

russh = "0.60"
russh-sftp = "2.1"
sha2 = "0.11"
base64 = "0.22"
async-channel = "2"
bytes = "1"
portable-pty = "0.9"

# S3-compatible cloud sync (AWS S3, Cloudflare R2, Backblaze B2, Wasabi,
# MinIO, DigitalOcean Spaces, etc.). Narrow feature set — we only need
# PUT/HEAD/GET on a single object per bucket. Default features bring
# rustls so we avoid a system OpenSSL dep on Windows.
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }

# Used by the in-app VcXsrv installer (see `xserver::install`). Already
# pulled in transitively by tauri-plugin-updater; listing it directly
# keeps the version pin visible. rustls-tls matches the rest of our
# TLS stack (no OpenSSL dep).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
integration = []
