[package]
name = "ezterm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Free Windows SSH client (MobaXterm-style)."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.10"
zeroize = { version = "1.8", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

directories = "6"

russh = "0.60"
russh-sftp = "2.1"
sha2 = "0.11"
base64 = "0.22"
async-channel = "2"
bytes = "1"
portable-pty = "0.9"

# S3-compatible cloud sync (AWS S3, Cloudflare R2, Backblaze B2, Wasabi,
# MinIO, DigitalOcean Spaces, etc.). Narrow feature set — we only need
# PUT/HEAD/GET on a single object per bucket. Default features bring
# rustls so we avoid a system OpenSSL dep on Windows.
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }

# Used by the in-app VcXsrv installer (see `xserver::install`). Already
# pulled in transitively by tauri-plugin-updater; listing it directly
# keeps the version pin visible. rustls-tls matches the rest of our
# TLS stack (no OpenSSL dep).
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }

# Native OLE drag source for SFTP drag-out. Windows-only dep — the
# webview can't supply real OS-visible files to Explorer / file
# managers, so we implement IDataObject + IDropSource ourselves and
# stream bytes via IStream. macOS and Linux equivalents (NSFilePromise,
# XDS, wl_data_source) are deferred to phases B5/B6 of issue #28.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
# windows-implement / windows-interface generate code that references the
# `windows_core` crate by name (not via windows::core). Pull it in
# directly so the #[implement] macro on our IDataObject etc. resolves.
windows-core = "0.58"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
integration = []
